--- a/src/MainApplication/Gui/ui/MainWindow.ui
+++ b/src/MainApplication/Gui/ui/MainWindow.ui
@@ -755,6 +755,7 @@
    <addaction name="actionGizmoTranslate"/>
    <addaction name="actionGizmoRotate"/>
    <addaction name="separator"/>
+   <addaction name="actionToggleXray"/>
   </widget>
   <action name="actionOpenMesh">
    <property name="text">
@@ -848,6 +849,28 @@
    </property>
    <property name="toolTip">
     <string>Disable transform gizmo.</string>
+   </property>
+  </action>
+  <action name="actionToggleXray">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>toggleXray</string>
+   </property>
+   <property name="toolTip">
+    <string>Display animation bones on top of everything or not</string>
+   </property>
+   <property name="shortcut">
+    <string>X</string>
+   </property>
+    <property name="icon">
+    <iconset>
+     <normalon>:/Assets/Images/xray.png</normalon>
+    </iconset>
    </property>
   </action>
  </widget>
