--- a/src/MainApplication/Gui/ui/MainWindow.ui
+++ b/src/MainApplication/Gui/ui/MainWindow.ui
@@ -40,12 +40,12 @@
      <x>0</x>
      <y>0</y>
      <width>1204</width>
-     <height>25</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFILE">
     <property name="title">
-     <string>File</string>
+     <string>Fi&amp;le</string>
     </property>
     <addaction name="actionOpenMesh"/>
     <addaction name="separator"/>
@@ -53,7 +53,7 @@
    </widget>
    <widget class="QMenu" name="menuMisc">
     <property name="title">
-     <string>Misc</string>
+     <string>&amp;Misc</string>
     </property>
     <addaction name="actionReload_Shaders"/>
    </widget>
@@ -105,7 +105,7 @@
              </size>
             </property>
             <property name="currentIndex">
-             <number>0</number>
+             <number>4</number>
             </property>
             <property name="movable">
              <bool>false</bool>
@@ -725,6 +725,13 @@
                   </property>
                  </widget>
                 </item>
+                <item row="0" column="4">
+                 <widget class="QPushButton" name="doItButton">
+                  <property name="text">
+                   <string>doIt</string>
+                  </property>
+                 </widget>
+                </item>
                </layout>
               </item>
              </layout>
@@ -760,7 +767,7 @@
   </widget>
   <action name="actionOpenMesh">
    <property name="text">
-    <string>Open...</string>
+    <string>&amp;Open...</string>
    </property>
    <property name="toolTip">
     <string>Open...</string>
@@ -771,7 +778,7 @@
   </action>
   <action name="actionExit">
    <property name="text">
-    <string>Exit</string>
+    <string>&amp;Exit</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Q</string>
@@ -779,7 +786,7 @@
   </action>
   <action name="actionReload_Shaders">
    <property name="text">
-    <string>Reload Shaders</string>
+    <string>&amp;Reload Shaders</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+R</string>
