--- a/src/QRadium/Gui/ui/MainWindow.ui
+++ b/src/QRadium/Gui/ui/MainWindow.ui
@@ -22,7 +22,7 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
-     <widget class="Ra::Gui::Viewer" name="m_viewer" native="true">
+     <widget class="QRadium::Viewer" name="m_viewer" native="true">
       <property name="minimumSize">
        <size>
         <width>800</width>
@@ -311,7 +311,7 @@
                <x>0</x>
                <y>0</y>
                <width>334</width>
-               <height>179</height>
+               <height>286</height>
               </rect>
              </property>
              <attribute name="label">
@@ -398,13 +398,13 @@
               </item>
              </layout>
             </widget>
-            <widget class="Ra::Gui::TransformEditorWidget" name="tab_edition">
+            <widget class="QRadium::TransformEditorWidget" name="tab_edition">
              <property name="geometry">
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>98</width>
-               <height>28</height>
+               <width>258</width>
+               <height>201</height>
               </rect>
              </property>
              <attribute name="label">
@@ -581,15 +581,15 @@
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
-   <class>Ra::Gui::Viewer</class>
+   <class>QRadium::Viewer</class>
    <extends>QWidget</extends>
-   <header location="global">MainApplication/Gui/Viewer.hpp</header>
+   <header location="global">QRadium/Gui/Viewer.hpp</header>
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>Ra::Gui::TransformEditorWidget</class>
+   <class>QRadium::TransformEditorWidget</class>
    <extends>QWidget</extends>
-   <header location="global">MainApplication/Gui/TransformEditorWidget.hpp</header>
+   <header location="global">QRadium/Gui/TransformEditorWidget.hpp</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
