Create a separate Application directory (mainly move and change includes). Move PluginBase out from the MainApplication

--- a/Applications/MainApplication/Gui/ui/MaterialEditor.ui
+++ b/Applications/MainApplication/Gui/ui/MaterialEditor.ui
@@ -214,7 +214,7 @@
   <customwidget>
    <class>Ra::Gui::ColorWidget</class>
    <extends>QWidget</extends>
-   <header location="global">MainApplication/Gui/ColorWidget.hpp</header>
+   <header location="global">Gui/ColorWidget.hpp</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
